package org.example.Services;

public interface OperationStrategy {
    double exec(double a, double b);

}
